chapter25/25_2_CreateVPCwithWebserverStreamlit.json
{
	"Description": "This CloudFormation Template creates a VPC with two pairs of public and private subnets spread across two Availability Zones. It deploys an internet gateway, with a default route on the public subnets. It deploys a pair of NAT gateways (one in each AZ) and default routes for them in the private subnets. The template deploys an EC2 based web server with a public IP address and allows access to the web server from your IP address.",
	"AWSTemplateFormatVersion": "2010-09-09",
	"Parameters": {
		"YourPublicIPAddress": {
			"Description": "Please supply your public IP address with a /32 suffix. Type checkip.amazonaws.com in your web browser to view your public IP address. For example, if your public IP address is 1.2.3.4, provide this value:1.2.3.4/32",
			"Type": "String"
		},
		"LatestAmiId": {
			"Description": "The latest AMI id. Default is Amazon Linux 2023",
			"Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
			"Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"
		},
		"InstanceType": {
			"Description": "WebServer EC2 instance type",
			"Type": "String",
			"Default": "t2.small",
			"AllowedValues": [
				"t1.micro",
				"t2.nano",
				"t2.micro",
				"t2.small",
				"t2.medium",
				"t2.large",
				"m1.small",
				"m1.medium",
				"m1.large",
				"m1.xlarge",
				"m2.xlarge",
				"m2.2xlarge",
				"m2.4xlarge",
				"m3.medium",
				"m3.large",
				"m3.xlarge",
				"m3.2xlarge",
				"m4.large",
				"m4.xlarge",
				"m4.2xlarge",
				"m4.4xlarge",
				"m4.10xlarge",
				"c1.medium",
				"c1.xlarge",
				"c3.large",
				"c3.xlarge",
				"c3.2xlarge",
				"c3.4xlarge",
				"c3.8xlarge",
				"c4.large",
				"c4.xlarge",
				"c4.2xlarge",
				"c4.4xlarge",
				"c4.8xlarge",
				"g2.2xlarge",
				"g2.8xlarge",
				"r3.large",
				"r3.xlarge",
				"r3.2xlarge",
				"r3.4xlarge",
				"r3.8xlarge",
				"i2.xlarge",
				"i2.2xlarge",
				"i2.4xlarge",
				"i2.8xlarge",
				"d2.xlarge",
				"d2.2xlarge",
				"d2.4xlarge",
				"d2.8xlarge",
				"hi1.4xlarge",
				"hs1.8xlarge",
				"cr1.8xlarge",
				"cc2.8xlarge",
				"cg1.4xlarge"
			],
			"ConstraintDescription": "must be a valid EC2 instance type."
		},
		"VpcCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for this VPC",
			"Type": "String",
			"Default": "10.0.0.0/16"
		},
		"FirstPublicSubnetCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
			"Type": "String",
			"Default": "10.0.1.0/24"
		},
		"SecondPublicSubnetCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
			"Type": "String",
			"Default": "10.0.2.0/24"
		},
		"FirstPrivateSubnetCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
			"Type": "String",
			"Default": "10.0.3.0/24"
		},
		"SecondPrivateSubnetCIDR": {
			"Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
			"Type": "String",
			"Default": "10.0.4.0/24"
		}
	},
	"Metadata": {
		"AWS::CloudFormation::Interface": {
			"ParameterGroups": [
				{
					"Label": {
						"default": "Your IP and EC2 Configuration"
					},
					"Parameters": [
						"YourPublicIPAddress",
						"LatestAmiId",
						"InstanceType"
					]
				},
				{
					"Label": {
						"default": "VPC Configuration"
					},
					"Parameters": [
						"VpcCIDR",
						"FirstPublicSubnetCIDR",
						"SecondPublicSubnetCIDR",
						"FirstPrivateSubnetCIDR",
						"SecondPrivateSubnetCIDR"
					]
				}
			],
			"ParameterLabels": {
				"VpcCIDR": {
					"default": "CIDR of the VPC where the web server will be deployed"
				},
				"FirstPublicSubnetCIDR": {
					"default": "CIDR of the public subnet where the web server will be deployed"
				},
				"YourPublicIPAddress": {
					"default": "Your public IP Address"
				},
				"LatestAmiId": {
					"default": "Amazon Linux 2 AMI ID"
				},
				"InstanceType": {
					"default": "Instance Type"
				}
			}
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VpcCIDR"
				},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": "Custom VPC for learning"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Metadata": {
				"Comment": "The internet gateway allows resources a route out to the internet"
			},
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": "ChapterTwentyFive-IGW"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"InternetGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				},
				"VpcId": {
					"Ref": "VPC"
				}
			},
			"Metadata": {
				"Comment": "Attaches the internet gateway to the VPC"
			}
		},
		"FirstPublicSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						0,
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"CidrBlock": {
					"Ref": "FirstPublicSubnetCIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Public Subnet in the first AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"SecondPublicSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						1,
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"CidrBlock": {
					"Ref": "SecondPublicSubnetCIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Public Subnet in the second AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"FirstPrivateSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						0,
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"CidrBlock": {
					"Ref": "FirstPrivateSubnetCIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Private Subnet in the first AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"SecondPrivateSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						1,
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"CidrBlock": {
					"Ref": "SecondPrivateSubnetCIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Private Subnet in the second AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"FirstNATGatewayEIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			},
			"Metadata": {
				"Comment": "Allocates an Elastic IP address for the gateway"
			}
		},
		"SecondNATGatewayEIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			},
			"Metadata": {
				"Comment": "Allocates an Elastic IP address for the gateway"
			}
		},
		"FirstNATGateway": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"FirstNATGatewayEIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "FirstPublicSubnet"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "NAT Gateway associated with the private subnet in the first AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"SecondNATGateway": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"SecondNATGatewayEIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "SecondPublicSubnet"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "NAT Gateway associated with the private subnet in the second AZ"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Public Route Table"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"PublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			},
			"Metadata": {
				"Comment": "Routes all traffic through the IGW"
			}
		},
		"FirstPublicSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "FirstPublicSubnet"
				}
			},
			"Metadata": {
				"Comment": "Associates the first public subnet with the public route table"
			}
		},
		"SecondPublicSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "SecondPublicSubnet"
				}
			},
			"Metadata": {
				"Comment": "Associates the second public subnet with the public route table"
			}
		},
		"FirstPrivateRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive First Private Route Table"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"FirstPrivateRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "FirstPrivateRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "FirstNATGateway"
				}
			},
			"Metadata": {
				"Comment": "Routes all traffic through the NAT gateway"
			}
		},
		"FirstPrivateSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "FirstPrivateRouteTable"
				},
				"SubnetId": {
					"Ref": "FirstPrivateSubnet"
				}
			},
			"Metadata": {
				"Comment": "Associates the private subnet with the private route table"
			}
		},
		"SecondPrivateRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter TwentyFive Second Private Route Table"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				]
			}
		},
		"SecondPrivateRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "SecondPrivateRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "SecondNATGateway"
				}
			},
			"Metadata": {
				"Comment": "Routes all traffic through the NAT gateway"
			}
		},
		"SecondPrivateSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "SecondPrivateRouteTable"
				},
				"SubnetId": {
					"Ref": "SecondPrivateSubnet"
				}
			},
			"Metadata": {
				"Comment": "Associates the private subnet with the private route table"
			}
		},
		"EC2SecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": "WebServerSecurityGroup"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				],
				"GroupDescription": "Allow http to client host",
				"GroupName": "WebServerSecurityGroup",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": 80,
						"ToPort": 80,
						"CidrIp": {
							"Ref": "YourPublicIPAddress"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": 8501,
						"ToPort": 8501,
						"CidrIp": {
							"Ref": "YourPublicIPAddress"
						}
					}
				]
			},
			"Metadata": {
				"Comment": "Allows inbound HTTP traffic from your public IP address"
			}
		},
		"SSMIAMRole": {
			"Type": "AWS::IAM::Role",
			"Properties": {
				"RoleName": "SSMIAMRoleForStreamlitWebServer",
				"AssumeRolePolicyDocument": {
					"Version": "2012-10-17",
					"Statement": [
						{
							"Effect": "Allow",
							"Principal": {
								"Service": "ec2.amazonaws.com"
							},
							"Action": "sts:AssumeRole"
						}
					]
				},
				"Path": "/",
				"ManagedPolicyArns": [
					"arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM",
					"arn:aws:iam::aws:policy/AmazonBedrockFullAccess"
				]
			}
		},
		"SSMIAMInstanceProfile": {
			"Type": "AWS::IAM::InstanceProfile",
			"Properties": {
				"Path": "/",
				"Roles": [
					{
						"Ref": "SSMIAMRole"
					}
				]
			}
		},
		"WebServer": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": {
					"Ref": "LatestAmiId"
				},
				"InstanceType": {
					"Ref": "InstanceType"
				},
				"IamInstanceProfile": {
					"Ref": "SSMIAMInstanceProfile"
				},
				"SecurityGroupIds": [
					{
						"Fn::GetAtt": [
							"EC2SecurityGroup",
							"GroupId"
						]
					}
				],
				"SubnetId": {
					"Ref": "FirstPublicSubnet"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "Chapter25WebServer"
					},
					{
						"Key": "Chapter",
						"Value": "TwentyFive"
					}
				],
				"UserData": {
					"Fn::Base64": {
						"Fn::Join": [
							"",
							[
								"#!/bin/bash -xe\n",
								"yum install -y aws-cfn-bootstrap\n",
								"# Install the files and packages from the metadata\n",
								"/opt/aws/bin/cfn-init -v ",
								"         --stack ",
								{
									"Ref": "AWS::StackName"
								},
								"         --resource WebServer ",
								"         --configsets All",
								"         --region ",
								{
									"Ref": "AWS::Region"
								},
								"\n",
								"# Signal the status from cfn-init\n",
								"/opt/aws/bin/cfn-signal -e $? ",
								"         --stack ",
								{
									"Ref": "AWS::StackName"
								},
								"         --resource WebServer ",
								"         --region ",
								{
									"Ref": "AWS::Region"
								},
								"\n"
							]
						]
					}
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Init": {
					"configSets": {
						"All": [
							"InstallSSMAgent",
							"InstallStreamlit"
						]
					},
					"InstallSSMAgent": {
						"services": {
							"sysvinit": {
								"amazon-ssm-agent": {
									"enabled": "true",
									"ensureRunning": "true"
								}
							}
						}
					},
					"InstallStreamlit": {
						"commands": {
							"01_create_app_directory": {
								"command": "mkdir -p /home/ec2-user/streamlit_app",
								"cwd": "/home/ec2-user"
							},
							"02_create_virtual_environment": {
								"command": "python3 -m venv /home/ec2-user/streamlit_app/env",
								"cwd": "/home/ec2-user/streamlit_app"
							},
							"03_install_streamlit": {
								"command": "source /home/ec2-user/streamlit_app/env/bin/activate && pip install --upgrade pip && pip install streamlit boto3 requests && deactivate",
								"cwd": "/home/ec2-user/streamlit_app"
							},
							"04_download_app": {
								"command": "wget https://raw.githubusercontent.com/bpb-aws-book/bpb-aws-book/refs/heads/main/chapter25/app.py -O /home/ec2-user/streamlit_app/app.py",
								"cwd": "/home/ec2-user/streamlit_app"
							},
							"05_set_ownership": {
								"command": "chown -R ec2-user:ec2-user /home/ec2-user/streamlit_app",
								"cwd": "/home/ec2-user"
							},
							"06_launch_streamlit": {
								"command": "bash -c 'cat > /etc/systemd/system/streamlit.service << EOF\n[Unit]\nDescription=Streamlit App\nAfter=network.target\n\n[Service]\nUser=ec2-user\nWorkingDirectory=/home/ec2-user/streamlit_app\nExecStart=/home/ec2-user/streamlit_app/env/bin/streamlit run app.py --server.port 8501 --server.address 0.0.0.0\nRestart=always\n\n[Install]\nWantedBy=multi-user.target\nEOF\nsystemctl daemon-reload && systemctl enable streamlit && systemctl start streamlit'",
								"cwd": "/home/ec2-user"
							},
							"07_redirect_port_80_to_8501": {
								"command": "yum install -y iptables-nft && iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8501",
								"cwd": "/home/ec2-user"
							}
						}
					}
				}
			},
			"CreationPolicy": {
				"ResourceSignal": {
					"Timeout": "PT10M"
				}
			}
		}
	},
	"Outputs": {
		"PublicIp": {
			"Value": {
				"Fn::GetAtt": [
					"WebServer",
					"PublicIp"
				]
			},
			"Description": "Web Server's Public IP Address"
		},
		"VPC": {
			"Description": "A reference to the created VPC",
			"Value": {
				"Ref": "VPC"
			}
		},
		"FirstPublicSubnet": {
			"Description": "A reference to the public subnet in the 1st Availability Zone",
			"Value": {
				"Ref": "FirstPublicSubnet"
			}
		},
		"SecondPublicSubnet": {
			"Description": "A reference to the public subnet in the 2nd Availability Zone",
			"Value": {
				"Ref": "SecondPublicSubnet"
			}
		},
		"FirstPrivateSubnet": {
			"Description": "A reference to the private subnet in the 1st Availability Zone",
			"Value": {
				"Ref": "FirstPrivateSubnet"
			}
		},
		"SecondPrivateSubnet": {
			"Description": "A reference to the private subnet in the 2nd Availability Zone",
			"Value": {
				"Ref": "SecondPrivateSubnet"
			}
		}
	}
}
